<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="600dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_boder_top_24"
    android:backgroundTint="@color/color_262626"
    android:paddingHorizontal="16dp"
    android:paddingBottom="24dp"
    android:minHeight="400dp"
    android:theme="@style/Theme.AppCompat"
    >

    <View
        android:layout_width="40dp"
        android:layout_height="4dp"
        android:background="@drawable/bg_radius_2_gray"
        android:backgroundTint="@color/color_666666"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:id="@+id/handleBar" />

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/handleBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        app:titleTextColor="@color/color_FFFFFF"
        app:title="@string/filter"
        android:fontFamily="@font/lato_bold"
        android:textAllCaps="false"
        app:titleCentered="true"
        android:id="@+id/toolBar"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="24dp"
        android:layout_height="0dp"
        android:id="@+id/cancelIc"
        app:layout_constraintTop_toTopOf="@id/toolBar"
        app:layout_constraintBottom_toBottomOf="@id/toolBar"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_cancel"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="4dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolBar"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/gender"
        android:textColor="@color/color_FFFFFF"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:fontFamily="@font/lato_bold"
        android:id="@+id/tvGender"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/tvGender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/layoutGender">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginEnd="8dp"
            android:text="@string/male"
            android:textColor="@color/select_text_color"
            android:fontFamily="@font/lato_bold"
            android:background="@drawable/bg_border_40_select"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:id="@+id/btnMale"
            android:gravity="center"
            android:paddingVertical="8dp"
            android:paddingHorizontal="16dp"
            android:clickable="true"
            android:focusable="true"
             />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginHorizontal="4dp"
            android:text="@string/female"
            android:textColor="@color/select_text_color"
            android:fontFamily="@font/lato_bold"
            android:background="@drawable/bg_border_40_select"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:id="@+id/btnFemale"
            android:gravity="center"
            android:paddingVertical="8dp"
            android:paddingHorizontal="16dp"
            android:clickable="true"
            android:focusable="true"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginStart="8dp"
            android:text="@string/non_binary"
            android:textColor="@color/select_text_color"
            android:fontFamily="@font/lato_bold"
            android:background="@drawable/bg_border_40_select"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:id="@+id/btnNonBinary"
            android:gravity="center"
            android:paddingVertical="8dp"
            android:paddingHorizontal="16dp"
            android:clickable="true"
            android:focusable="true"
            />

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/layoutGender"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/age"
        android:textColor="@color/color_FFFFFF"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:fontFamily="@font/lato_bold"
        android:id="@+id/tvAge"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/tvAge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/layoutAge"
        app:layout_constraintHorizontal_bias="0"
        >

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginEnd="6dp"
            android:text="@string/_18"
            android:background="@drawable/bg_border_40_select"
            android:textAllCaps="false"
            android:textColor="@color/select_text_color"
            android:fontFamily="@font/lato_bold"
            android:textSize="14sp"
            android:id="@+id/btnAgeUnder18"
            android:gravity="center"
            android:paddingVertical="8dp"
            android:paddingHorizontal="10dp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginHorizontal="3dp"
            android:text="@string/_18_25"
            android:textColor="@color/select_text_color"
            android:fontFamily="@font/lato_bold"
            android:background="@drawable/bg_border_40_select"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:id="@+id/btnAge1825"
            android:gravity="center"
            android:paddingVertical="8dp"
            android:paddingHorizontal="10dp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginHorizontal="3dp"
            android:text="@string/_25_35"
            android:textColor="@color/select_text_color"
            android:fontFamily="@font/lato_bold"
            android:background="@drawable/bg_border_40_select"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:id="@+id/btnAge2535"
            android:gravity="center"
            android:paddingVertical="8dp"
            android:paddingHorizontal="10dp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginStart="6dp"
            android:text="@string/_35"
            android:textColor="@color/select_text_color"
            android:fontFamily="@font/lato_bold"
            android:background="@drawable/bg_border_40_select"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:id="@+id/btnAgeOver35"
            android:gravity="center"
            android:paddingVertical="8dp"
            android:paddingHorizontal="10dp"
            />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/layoutAge"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/style"
        android:textColor="@color/color_FFFFFF"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:fontFamily="@font/lato_bold"
        android:id="@+id/tvStyle"
        />


    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintTop_toBottomOf="@id/tvStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/layoutActions"
        app:layout_constraintVertical_bias="0"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="8dp"
        android:nestedScrollingEnabled="false"
        android:id="@+id/rvStyle"
        android:clipToPadding="false"
        android:paddingBottom="90dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="1"
        android:id="@+id/layoutActions"
        android:background="@color/color_transparent_00FFFFFF"
        >

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:text="@string/reset"
            android:textColor="@color/color_FFFFFF"
            android:backgroundTint="@color/color_27FFFFFF"
            android:textAllCaps="false"
            android:fontFamily="@font/lato_bold"
            android:background="@drawable/bg_radius_12_gray"
            android:textSize="16sp"
            android:id="@+id/btnReset"
            android:gravity="center"
            android:paddingVertical="10dp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:text="@string/apply"
            android:textColor="@color/color_FFFFFF"
            android:background="@drawable/bg_btn_gardien_radius_12"
            android:textAllCaps="false"
            android:fontFamily="@font/lato_bold"
            android:textSize="16sp"
            android:id="@+id/btnApply"
            android:gravity="center"
            android:paddingVertical="10dp"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>