<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/bg_border_16"
    android:backgroundTint="@color/color_262626"
    android:paddingVertical="8dp"
    android:paddingHorizontal="4dp"
    android:minWidth="200dp">


    <TextView
        android:id="@+id/itemEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_edit"
        android:drawablePadding="16dp"
        app:drawableTint="@color/white"
        android:text="@string/edit"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:paddingVertical="12dp"
        android:paddingHorizontal="16dp"
        android:gravity="center_vertical"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true" />

    <TextView
        android:id="@+id/itemShare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_share"
        android:drawablePadding="16dp"
        app:drawableTint="@color/white"
        android:text="@string/share"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:paddingVertical="12dp"
        android:paddingHorizontal="16dp"
        android:gravity="center_vertical"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true" />

    <TextView
        android:id="@+id/itemDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_trash"
        android:drawablePadding="16dp"
        app:drawableTint="@color/white"
        android:text="@string/delete_character"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:paddingVertical="12dp"
        android:paddingHorizontal="16dp"
        android:gravity="center_vertical"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true" />

</LinearLayout>